@@ -1,8 +1,9 @@
 duicontrolpanel (0.11.7~unreleased) unstable; urgency=low
 
   * Changes: new briefview type - Slider
+  * Changes: Support for briefviews with horizontal layouted value line
 
- -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 15 Feb 2011 13:31:32 +0100
+ -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 15 Feb 2011 16:57:31 +0100
 
 duicontrolpanel (0.11.6.3) unstable; urgency=low
 
